array.island.Island.scala.error
Compilation error:
Island:6: error: '(' expected but identifier found.
    if num(i+1) > num(i){
       ^Island:9: error: illegal start of simple expression
  }
  ^