array.island.Island.scala.code
liste=()

def island(num:Array[Int]): Int = {
  for (i<-1 to num.length-1){
    if num(i+1) > num(i){
      
    }
  }
}